gatway-dep-service/gatway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatway-service
  labels:
    app: gatway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatway-service
  template:
    metadata:
      labels:
        app: gatway-service
    spec:
      containers:
        - name: gatway-service
          image: 923975749308.dkr.ecr.ap-northeast-1.amazonaws.com/gatway-service:1.0.9
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gatway-service
  labels:
    app: gatway-service
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-path: /gatway
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  selector:
    app: gatway-service
  ports:
    - port: 8080
      targetPort: 8080
